# Newton-PnP

./: CMakeLists.txt  Dependencies.md  LICENSE  README.md
src/: main.cpp
src/CSVReader/: CSVReader.cpp  CSVReader.h
src/NewtonPnP/: NewtonPnP.cpp  NewtonPnP.h
src/PnP/: BarrierMethodSettings.h  DualVar.cpp  DualVar.h  LogDetHessianMatrix.cpp  LogDetHessianMatrix.h  PnPRansac.cpp  PnpBarrierMethodSolver.cpp  PnpInput.cpp  PnpInput.h  PnpLocalSearch.cpp  PnpObjective.cpp  PnpObjective.h  PnpProblemSolver.cpp  PnpProblemSolver.h  PnpResult.cpp  PnpResult.h  QuaternionVector.cpp  QuaternionVector.h
src/RansacOptimalPnP/: RansacOptimalPnP.cpp  RansacOptimalPnP.h
src/Utils_pnp/: Definitions.h  GeneralUtils.cpp  GeneralUtils.h  MatrixUtils.h  Parsing.cpp  Parsing.h
